[package]
name = "py_monte_carlo_pi"
version = "1.0.0"
authors = [""]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monte_carlo_pi = {path = "../monte_carlo_pi"}

[lib]
name = "montecarlopi"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.7.1"
features = ["extension-module"]
